...
        android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChatRoom">


    <EditText
        android:id="@+id/editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enterpass"
        android:minHeight="48dp"
        app:layout_constraintEnd_toStartOf="@+id/ReceiveButton"
        app:layout_constraintHorizontal_bias="0.0"
...
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/sendButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/theRecycleView"
            android:layout_width="0dp"
...
