<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ChatRoom">


    <TextView
        android:id="@+id/databaseText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="Database id goes here"
        app:layout_constraintStart_toStartOf="@+id/typeText"
        app:layout_constraintTop_toBottomOf="@+id/typeText" />

    <TextView
        android:id="@+id/messageText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="MessageGoesHere"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/timeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="Time goes here"
        app:layout_constraintStart_toStartOf="@+id/messageText"
        app:layout_constraintTop_toBottomOf="@+id/messageText" />

    <TextView
        android:id="@+id/typeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="send receive goes here"
        app:layout_constraintStart_toStartOf="@+id/timeText"
        app:layout_constraintTop_toBottomOf="@+id/timeText" />
</androidx.constraintlayout.widget.ConstraintLayout>